syntax = "proto3";
option cc_enable_arenas = true;

message Connect {
  int32 client_type = 1; // 1: 正常客户端, 2: 命令行客户端
  string username = 2;
  string password = 3;
}

message ChatAndBroadcast {
  string msg = 1;
}

message InventoryItemInfoMsg {
  uint32 ItemId = 1;
  uint32 ItemCount = 2;
  string ItemClob = 3;
}

message InventoryItemMsg {
  repeated InventoryItemInfoMsg items = 1;
}

message InventoryMsg {
  uint32 InventoryId = 1;
  repeated InventoryItemMsg items = 2;
}