syntax = "proto3";
option cc_enable_arenas = true;

message ServerStatus {
  string version = 1;
  string name = 2;
  uint64 memoryTotal = 3;
  uint64 memoryUsed = 4;
  int64 maxPlayers = 5;
  int64 onlinePlayers = 6;
  int64 tps = 7;
  uint32 ping = 8;
}

message BlockDefineItem {
  int64 block_id = 1;
}

message BlockDefine {
  repeated BlockDefineItem items = 1;
}

message BlockData {
  int64 block_id = 1;
  int64 sub_id = 2;
}

message ChunkData {
  int64 x = 1;
  int64 y = 2;
  int64 z = 3;
  repeated BlockData blocks = 4;
}

message PlayerItem {
  int64 id = 1;
  string name = 2;
  uint32 ping = 3;
}

message OnlineList {
  repeated PlayerItem players = 1;
}